# Microvest

./: .env  .env.local  README.md  app.py  develop.py  pyproject.toml  requirements.txt  run.bat  test.py
model/: model.pkl  model_pytorch.pth
neural network/: reg.py
neural network/network/: data_generator.py  neuron.py
neural network/sandbox/: neuron.py
output/: predictions.csv
screeners/: app.py
src/: app.py  backtest.py  config.yaml  data_gathering.py  data_processing.py  dataset.py  demo_data_retrival.py  lightning_modules.py  model.py  tempCodeRunnerFile.py  train.py
src/runs/stock_model/version_0/: events.out.tfevents.1752729358.DaGameyBros.34404.0  hparams.yaml
