[project]
name = "microvest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.2",
    "numpy==1.26.0",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "pandas-ta>=0.3.14b0",
    "plotly>=6.2.0",
    "pytorch-lightning>=2.5.2",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.1",
    "torch>=2.7.1",
    "yfinance>=0.2.65",
    "tensorboard>=2.17.0",
    "tensorboard-data-server>=0.7.2",
    "lxml>=6.0.0",
]
